--- a/gradle.properties
+++ b/gradle.properties
@@ -4,9 +4,13 @@ kotlin.daemon.jvmargs=-Xmx3072M
 
 #Gradle
 org.gradle.jvmargs=-Xmx4096M -Dfile.encoding=UTF-8
-org.gradle.configuration-cache=true
 org.gradle.caching=true
 
 #Android
 android.nonTransitiveRClass=true
 android.useAndroidX=true
+
+#Ksp
+ksp.useKSP2=true
+ksp.incremental=false
+io.mockative.enabled=true
